cabal-version:       2.2

name:                steamid-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leighmacdonald/steamid-hs#readme
license:             MIT
license-file:        LICENSE
author:              Leigh MacDonald
maintainer:          leigh.macdonald@gmail.com
copyright:           2025 Leigh MacDonald
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     SteamID
  build-depends:
    base >= 4.7 && < 5,
    hspec,
    hspec-contrib,
    QuickCheck,
    HUnit
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite steamid-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SteamIDSpec
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  build-depends: base
                , steamid-hs
                , hspec
                , QuickCheck
                , HUnit
  default-language:    Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wpartial-fields
               -Wredundant-constraints
               -threaded
               -rtsopts
               -with-rtsopts=-N


source-repository head
  type:     git
  location: https://github.com/leighmacdonald/steamid-hs
